deploy/kubernetes/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initializr-izrs
  namespace: initializr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: initializr-izrs
  template:
    metadata:
      labels:
        app: initializr-izrs
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: initializr-izrs
        image: steeltoe.azurecr.io/initializr-izrs
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: initializr-izrs
  namespace: initializr
spec:
  ports:
  - port: 80
  selector:
    app: initializr-izrs
