deploy/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: initializr-izrs
spec:
  ports:
  - port: 80
  selector:
    app: initializr-izrs
