deploy/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: initializr-ingress
  namespace: initializr
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: start.steeltoe.io
  - host: 40.65.235.175
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: initializr-web
          servicePort: 80
      - path: /(api/.*)
        backend:
          serviceName: initializr-api
          servicePort: 80
      - path: /config/(.*)
        backend:
          serviceName: initializr-config-server
          servicePort: 8888
      - path: /izrs/(.*)
        backend:
          serviceName: initializr-izrs
          servicePort: 80
