deploy/kubernetes/staging.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initializr-izrs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: initializr-izrs
  template:
    metadata:
      labels:
        app: initializr-izrs
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: initializr-izrs
        image: steeltoe.azurecr.io/initializr-izrs
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: initializr-izrs
spec:
  ports:
  - port: 80
  selector:
    app: initializr-izrs
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: initializr-ingress
  namespace: initializr
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: initializr-web
          servicePort: 80
      - path: /(api/.*)
        backend:
          serviceName: initializr-api
          servicePort: 80
      - path: /config/(.*)
        backend:
          serviceName: initializr-config-server
          servicePort: 8888
      - path: /izrs/(.*)
        backend:
          serviceName: initializr-izrs
          servicePort: 80
